--- a/index.html
+++ b/index.html
@@ -508,15 +508,16 @@ Used for the product in a product list (prodlist), usually in the body of a cate
 the loadingBG class is removed (must be that classname) when the template is translated.
 remember to NOT put the button inside the 'onclick' container or two events will occur onclick.
 -->
-<li id='productListTemplateResults' class='loadingBG resultsPLContainer' >
+<li id='productListTemplateResults' class='loadingBG plContainer' >
 	<div onClick="showContent('product',{'pid':$(this).attr('data-pid')})" data-bind='var:product(pid);format:assignAttribute; attribute:data-pid;' class='pointer'>
+		<h5 class="prodName" data-bind='var: product(prod_name); format:text;'></h5>
 		<div class='prodThumbContainer'>
-		<img src='blank.gif' class='prodThumb' data-bind='var: product(images); format:elasticImage1URL;bgcolor:ffffff;' width='120' height='120' />
+		<img src='blank.gif' class='prodThumb' data-bind='var: product(images); format:elasticImage1URL;bgcolor:ffffff;' width='190' height='190' />
 		</div>
 
-		<h5 data-bind='var: product(prod_name); format:text;'></h5>
-
-		<h6 data-bind='var: product(base_price); format:elasticMoney; currencySign: $;  hideZero:true; className:price; pretext: Our Price: ;'></h6>
+		<div class="priceContainer">
+			<h6 class="basePrice marginLeft" data-bind='var: product(base_price); format:elasticMoney; currencySign: $;  hideZero:true; className:price;'></h6>
+		</div>
 	</div>
 </li>
 </ul>
