--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ var _gaq = _gaq || {'push':function(){}} //here for testing. REPLACE BEFORE DEPL
 var myCreole;
 
 var app = {vars:{
-	"release":"201301231521",  //increment this with each change. should solve caching issues. format: YYYYMMDDHHMMSS
+	"release":"20130124133900",  //increment this with each change. should solve caching issues. format: YYYYMMDDHHMMSS
 	"_clientid":"zmvc",
 	"baseURL":"",
 	"httpsURL":"https://ssl.zoovy.com/s=www.9c0a9a.snap.zoovy.net/",
@@ -382,11 +382,10 @@ don't modify the 'data-templateid' unless you are changing template names and up
 </li>
 
 
-<li id='categoryListTemplateRootCats'>
-	<div onClick="showContent('category',{'navcat':$(this).parent().attr('data-catsafeid')});" class='pointer'>
-		<div class='thumbContainer'><img src='blank.gif' class='catThumb' data-bind='var: category(%meta.CAT_THUMB); format:imageURL;' width='35' height='35' /></div>
-		<div class='catName'><span data-bind='var: category(pretty); format:prettyName;'></span></div>
-	</div>
+<li id='categoryListTemplateRootCats' onClick="showContent('category',{'navcat':$(this).attr('data-catsafeid')});" class='pointer'>
+	<img src='blank.gif' class='catThumb' data-bind='var: category(%meta.CAT_THUMB); format:imageURL;' width='45' height='45' />
+	<span data-bind='var: category(pretty); format:text;'></span>
+	<span data-bind='var: category(@products); format: numProduct; extension:store_navcats; pretext: (; posttext:) ;'></span>
 </li>
 
 </ul>
@@ -592,10 +591,13 @@ this will likely become more flexible in the future. ###
 
 	<menu data-bind='var:product(pid);format:assignAttribute; attribute:data-pid;' class='CRMButtonMenu'>
 
-	<a href='#' onClick='app.ext.store_crm.u.showReviewFrmInModal({"pid":$(this).parent().attr("data-pid"),"templateID":"reviewFrmTemplate"}); return false;'>Write Review</a>	|
+	<a href='#' onClick='app.ext.store_crm.u.showReviewFrmInModal({"pid":$(this).parent().attr("data-pid"),"templateID":"reviewFrmTemplate"}); return false;'>Write Review</a>	
+	
 
+	<!--
+	|
 	<a href='#' onClick="app.ext.myRIA.a.add2BuyerList({sku:$(this).parent().attr('data-pid'),'listid':'wishlist'}); return false;">Add to Wishlist</a>
-
+	-->
 	</menu>
 	<!--
 	<h5 class='stid' data-bind='var: product(pid); format:text; pretext: Sku: ;'></h5>
