customerTemplate BG added, Versioning

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ var _gaq = _gaq || {'push':function(){}} //here for testing. REPLACE BEFORE DEPL
 var myCreole;
 
 var app = {vars:{
-	"release":"20130124133900",  //increment this with each change. should solve caching issues. format: YYYYMMDDHHMMSS
+	"release":"20130124141700",  //increment this with each change. should solve caching issues. format: YYYYMMDDHHMMSS
 	"_clientid":"zmvc",
 	"baseURL":"",
 	"httpsURL":"https://ssl.zoovy.com/s=www.9c0a9a.snap.zoovy.net/",
@@ -987,7 +987,7 @@ adding classes is not likely to have any bad effects.
 
 
 <!-- loadingBG needed on this for app init (content may take a moment to load) -->
-<div id='customerTemplate' class='clearfix loadingBG'>
+<div id='customerTemplate' class='clearfix loadingBG contentContainer'>
 
 	<div class='sideline' >
 	<nav id='customerNav'>
