Added "Go" button to cart
totally non-functional, but will indicate to user that they can click
off the zip code field

--- a/index.html
+++ b/index.html
@@ -1231,6 +1231,8 @@ So the cart template should contain these two elements and the extension should 
 	app.ext.store_cart.u.updateCartSummary();
 	app.ext.store_cart.calls.cartShippingMethodsWithUpdate.init();
 	app.model.dispatchThis('immutable');"  />
+	<button class='ui-button-text ui-button ui-state-default ui-corner-all' onClick="return false;">Go!</button>
+	
 	<div>(Estimates for U.S. only, international shipping rates available in checkout!)</div>
 	</div>
 
