--- a/index.html
+++ b/index.html
@@ -377,14 +377,17 @@ don't modify the 'data-templateid' unless you are changing template names and up
 <li id='categoryListTemplate'>
 	<div onClick="showContent('category',{'navcat':$(this).parent().attr('data-catsafeid')});" class='pointer'>
 		<div class='thumbContainer'><img src='blank.gif' class='catThumb' data-bind='var: category(%meta.CAT_THUMB); format:imageURL;' width='150' height='150' /></div>
-		<div class='catName white2LGray'><span data-bind='var: category(pretty); format:prettyName;'></span></div>
+		<div class='catName white2LGray alignCenter'>
+			<span data-bind='var: category(pretty); format:prettyName;'></span>
+			<span data-bind='var: category(@products); format: numProduct; extension:store_navcats; pretext: (; posttext:) ;'></span>
+		</div>
 	</div>
 </li>
 
 
 <li id='categoryListTemplateRootCats' onClick="showContent('category',{'navcat':$(this).attr('data-catsafeid')});" class='pointer'>
 	<img src='blank.gif' class='catThumb' data-bind='var: category(%meta.CAT_THUMB); format:imageURL;' width='45' height='45' />
-	<span data-bind='var: category(pretty); format:text;'></span>
+	<span data-bind='var: category(pretty); format:prettyName;'></span>
 	<span data-bind='var: category(@products); format: numProduct; extension:store_navcats; pretext: (; posttext:) ;'></span>
 </li>
 
@@ -1305,7 +1308,7 @@ Amazon is not currently functional
 			
 			<div data-bind="var: product(is:specialorder); format:addClass; className:specialorder spriteBG pointer;"  onClick="return showContent('company',{'show':'shipping'});"></div>
 
-			<!--<div class='inStock spriteBG'></div>-->
+			<div class='inStock spriteBG' data-bind='var: product(zoovy:ship_latency); format:shippingLatencyAddClass;'></div>
 			<div data-bind='var: product(zoovy:ship_latency); format:shippingLatency;' class='latency'></div>
 		</div>
 
