--- a/index.html
+++ b/index.html
@@ -651,11 +651,13 @@ this will likely become more flexible in the future. ###
 	<div class='marginLeft'>
 	
 <div class='floatRight prodGuarantee'>
-<div class='header center' data-bind="var: product(is:user5); format:addClass; className:inStock spriteBG;"></div>
-<div class='header center' data-bind="var: product(is:user4); format:addClass; className:backorder spriteBG pointer;" onClick="$('#invMessage_is_backorder').dialog({width:'60%','modal':'true',autoOpen:false}); $('#invMessage_is_backorder').dialog('open');"></div>
-<div class='header center' data-bind="var: product(is:user6); format:addClass; className:soldOut spriteBG;"></div>
-<div class='header center' data-bind="var: product(is:preorder); format:addClass; className:preorder spriteBG;"></div>
-<div class='header center' data-bind="var: product(is:specialorder); format:addClass; className:specialorder spriteBG pointer;" onClick="return showContent('company',{'show':'shipping'});"></div>
+	<div class="bannerContainer">
+		<div class='header center' data-bind="var: product(is:user6); format:addClass; className:soldOut spriteBG;"></div>
+		<div class='header center' data-bind="var: product(is:user4); format:addClass; className:backorder spriteBG pointer;" onClick="$('#invMessage_is_backorder').dialog({width:'60%','modal':'true',autoOpen:false}); $('#invMessage_is_backorder').dialog('open');"></div>
+		<div class='header center' data-bind="var: product(is:preorder); format:addClass; className:preorder spriteBG;"></div>
+		<div class='header center' data-bind="var: product(is:specialorder); format:addClass; className:specialorder spriteBG pointer;" onClick="return showContent('company',{'show':'shipping'});"></div>
+		<div class='header center spriteBG inStock'></div>
+	</div>
 <div class='header center shiplatency' data-bind="var:product(zoovy:ship_latency); format:shippingLatency;"></div>
 
 	<ul class='checkmarkList'>
