Typo fix, Versioning

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ var _gaq = _gaq || {'push':function(){}} //here for testing. REPLACE BEFORE DEPL
 var myCreole;
 
 var app = {vars:{
-	"release":"20130131132600",  //increment this with each change. should solve caching issues. format: YYYYMMDDHHMMSS
+	"release":"20130131132800",  //increment this with each change. should solve caching issues. format: YYYYMMDDHHMMSS
 	"_clientid":"zmvc",
 	"baseURL":"",
 	"httpsURL":"https://ssl.zoovy.com/s=www.9c0a9a.snap.zoovy.net/",
@@ -1695,7 +1695,7 @@ The 'data-action' attribute is used to assign an onclick.
 			<p>If you pre-order or back order an item and pay with a credit card, the authorization for that purchase usually expires in seven days for Visa, or 30 days for MasterCard, American Express, Discover and PayPal. For items that arrive in more than 30 days, we may need to obtain another authorization from your credit card company. Your credit card is charged only at the time we ship the product.</p>
 			</div>
 			
-			<div id='returnPolicyTip' class='displayNone''>
+			<div id='returnPolicyTip' class='displayNone'>
 			<p>Orders are carefully inspected before shipping. We accept returns that are unused and unopened only unless the item itself is broken. Products must be in there original condition and packaging.</p>
 			<p>You must contact us first to receive an authorization before any return is able to be sent back. When we receive the return back your form of payment will be credited for the price of the item(s) and any taxes. This credit will not include shipping, unless the products were damaged upon arrival.</p>
 			<p>Your credit will be authorized after we receive and process your return, as long as the item meets the above criteria.</p>
